--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
           <h2>Hi, my name is Katherine. I'm a software developer based in Portland, Oregon.</h2>
           <!-- uncomment this to enable _config.yml description stanza
           <h2>{{ page.description | default: site.description | default: site.github.project_tagline }}</h2> -->
-          <a href="./index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="./">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="./gallery.html">Gallery</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </header>
         <section id="downloads" class="clearfix">
