--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
           <a href="./resume.html">resume</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="./personal.html">personal blog</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <a href="./tech.html">tech blog</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="./website-how-to.html">Writing Sample</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <a href="./website-how-to.html">writing sample</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </header>
         <section id="downloads" class="clearfix">
           {% if site.show_downloads %}
